syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.hugosave.intern.project.proto";
option java_multiple_files = true;


message TransactionHistoryDTO {
  repeated AssetTransactionDTO transaction_history = 1;
  string page_token = 2;
  string reverse_page_token = 3;
}

message TransactionMessageDTO {
  repeated AssetTransactionDTO transaction_message = 1;
}

message AssetTransactionDTO {
  string transaction_id = 1;
  string transaction_type = 2;
  string asset_code = 3;
  int32 quantity = 4;
  double total_amount = 5;
  string status = 6;
  double value = 7;
  string currency = 8;
  string ref_id = 9;
  google.protobuf.Timestamp timestamp = 10;
}

message UserTransactionRequestDTO {
  string asset_code = 1;
  int32 quantity = 2;
  double value = 3;
  string currency = 4;
  string ref_id = 5;
}
